feat(tests): add comprehensive E2E tests for authentication, onboarding, and multi-tenancy
- Implemented E2E tests for critical user flows including:
  - Complete accountant signup flow (E2E-001)
  - Login and password reset functionality (E2E-002)
  - Data isolation between accountants and clients (E2E-020)
- Created test utilities for cleaner test setup and teardown
- Established a structured test directory with clear organization
- Enhanced test coverage reporting and outlined future test plans

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "handlebars": "^4.7.8",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
+    "openai": "^6.15.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdfkit": "^0.17.2",
