--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": false,
     "noEmitOnError": false
   },
-  "exclude": ["scripts/**/*"]
+  "exclude": ["scripts/**/*", "src/financial/**/*"]
 }
